# zenbook-duo-linux-systools

./: .SRCINFO  .gitignore  .gitmodules  LICENSE  PKGBUILD  README.md  duo.conf  duo.sh  sudoers-zenbook-duo-systools  zenbook-duo-systools-1.0-3-any.pkg.tar.zst  zenbook-duo-systools-1.0-5-any.pkg.tar.zst  zenbook-duo-systools-1.3-10-x86_64.pkg.tar.zst  zenbook-duo-systools-1.3-3-any.pkg.tar.zst  zenbook-duo-systools-fnkeys-1.0-5-any.pkg.tar.zst  zenbook-duo-systools-user.service  zenbook-duo-systools.install  zenbook-duo-systools.service
3rd_src/: credits.md
control/: zenbook-duo-control.sh
coordinator/: zenbook-duo-matrix.service  zenbook-duo-matrix.sh
fnkeys/: 72-zenbook-duo-fnkeys-input.rules  backlight.py  duo-fnkeys.sh  fnkeys.conf  input_watcher.py  setup-fnkeys.sh  sudoers-zenbook-duo-systools-fnkeys  zenbook-duo-systools-fnkeys.install  zenbook-duo-systools-fnkeys.service
packaging/debian/: build-deb.sh  control.in  postinst  postrm  prerm
scripts/: pkg-env.sh
sysstates/: duo-sysstates.conf  duo-sysstates.sh  setup-sysstates.sh  sudoers-zenbook-duo-systools  zenbook-duo-systools-user.service  zenbook-duo-systools.install  zenbook-duo-systools.service  zenbook-duo-systools.sleep
ui/: 99-zenbook-backlight.rules  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts  zenbook-duo-ui-autostart.desktop  zenbook-duo-ui.desktop
ui/src/: App.css  App.tsx  index.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
